esm - fix section spacing

--- a/src/public/less/pages/esm.less
+++ b/src/public/less/pages/esm.less
@@ -28,10 +28,6 @@
 		text-align: center;
 		margin-top: 64px;
 		margin-bottom: 96px;
-		@media (max-width: @screen-sm-min) {
-			margin-top: 40px;
-			margin-bottom: 64px;
-		}
 
 		h1, h2 {
 			color: #fff;
@@ -98,8 +94,13 @@
 				}
 
 				.buttons-or {
+					color: #5C667A;
 					margin-left: 16px;
 					margin-right: 16px;
+					@media (max-width: @screen-xs-min) {
+						margin-top: 12px;
+						margin-bottom: 12px;
+					}
 				}
 
 				.btn-secondary {
@@ -139,10 +140,6 @@
 		margin-top: 80px;
 		margin-bottom: 80px;
 		text-align: center;
-		@media (max-width: @screen-sm-min) {
-			margin-top: 64px;
-			margin-bottom: 64px;
-		}
 		
 		.row{
 			margin-bottom: 24px;
@@ -301,10 +298,10 @@
 	.infographic {
 		margin-top: 80px;
 		margin-bottom: 80px;
-		@media (max-width: @screen-sm-min) {
-			margin-top: 64px;
-			margin-bottom: 64px;
-		}
+		// @media (max-width: @screen-sm-min) {
+		// 	margin-top: 64px;
+		// 	margin-bottom: 64px;
+		// }
 	}
 }
 
